# pyctcdecode

./: .coveragerc  .gitignore  .pylintrc  AUTHORS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  mypy.ini  pyproject.toml  setup.cfg  setup.py
.github/workflows/: tests_and_lint.yml
pyctcdecode/: __init__.py  alphabet.py  constants.py  decoder.py  language_model.py
pyctcdecode/tests/: helpers.py  test_alphabet.py  test_decoder.py  test_language_model.py  test_notebooks.py
pyctcdecode/tests/sample_data/: kenLM.arpa  libri_logits.json
scripts/: install_ubuntu_ci_core_dependencies.sh  lint.sh
tutorials/: 00_basic_usage.ipynb  01_pipeline_nemo.ipynb  02_pipeline_huggingface.ipynb  03_eval_performance.ipynb
